--- a/MoonBookWeb/Views/Books/UserLibrary.cshtml
+++ b/MoonBookWeb/Views/Books/UserLibrary.cshtml
@@ -1,4 +1,5 @@
-﻿<div style="display: flex;">
+﻿<link rel="stylesheet" href="~/css/userlibrary.css" asp-append-version="true" />
+<div style="display: flex;">
     <div id="UserLibrary">
         <div>
             <p id="TitleBook"><b>My Books</b></p>
