--- a/MoonBookWeb/Views/Home/Library.cshtml
+++ b/MoonBookWeb/Views/Home/Library.cshtml
@@ -1,4 +1,5 @@
-﻿<library id="Library">
+﻿<link rel="stylesheet" href="~/css/library.css" asp-append-version="true" />
+<library id="Library">
 
 </library>
 <script src="/js/library.js"></script>
