--- a/MoonBookWeb/Views/User/FreandPage.cshtml
+++ b/MoonBookWeb/Views/User/FreandPage.cshtml
@@ -1,4 +1,6 @@
-﻿<section id="FreandPage">
+﻿<link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/freand.css" asp-append-version="true" />
+<section id="FreandPage">
     <div id="FreandList">
         <p id="TitleFreand"><b>Freands</b></p>
         <freands id="Freand">
