--- a/MoonBookWeb/Views/Home/Index.cshtml
+++ b/MoonBookWeb/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<section id="BlogPage">
+﻿<link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
+<section id="BlogPage">
     <post id="post"> </post>
 </section>
 <script src="/js/home.js"></script>
