--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     var user = ViewData["AuthUser"] as User;
 }
-
+<link rel="stylesheet" href="~/css/userpage.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
 <section id="UserPage">
     <div id="UserAvatar">
         @if(!String.IsNullOrEmpty(user?.PhotoName))
@@ -17,7 +18,7 @@
         <online id="OnlineFreands"></online>
     </div>
     <div id="UserInformations">
-        <div id="UserName">
+        <div>
           <h1 id="UName">@user?.Name @user?.Surname</h1>
         </div>
         <books id="UserBooks">
