--- a/MoonBookWeb/Views/Home/Index.cshtml
+++ b/MoonBookWeb/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
 <section id="BlogPage">
-    <post id="post"> </post>
+    <post id="post"> <img src="../icons/oie_L36bLHLNsDH2.gif" /> </post>
 </section>
 <script src="/js/home.js"></script>
