--- a/MoonBookWeb/wwwroot/css/userlibrary.css
+++ b/MoonBookWeb/wwwroot/css/userlibrary.css
@@ -15,7 +15,7 @@
 
 #TitleBook {
     margin: 1%;
-    background-color: brown;
+    background-color: #08206c;
     width: 250px;
     height: 25px
 }
