--- a/MoonBookWeb/wwwroot/css/freand.css
+++ b/MoonBookWeb/wwwroot/css/freand.css
@@ -73,35 +73,42 @@
     width: 100%;
     height: 45px;
     border: 1px double black;
+    align-items: center;
 }
 
 #FreandPhoto {
-    border: 2px double black;
-    vertical-align: top;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
     margin: 1%;
-    border-radius: 150px;
-    width: 35px;
-    height: 35px;
 }
-
+    #FreandPhoto img{
+        border: 2px double black;
+        vertical-align: top;
+        margin: 1%;
+        border-radius: 150px;
+        width: 35px;
+        height: 35px;
+    }
 #FreandName {
     color: black;
     display: inline-block;
     vertical-align: middle;
+    width: 100%;
+    margin: 0;
 }
 
 #AddFreand {
-    background-color: transparent;
-    border-color: transparent;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
 }
-
-    #AddFreand img {
-        width: 25px;
-        height: 25px;
-    }
 #BackFreandsBlog {
-    position: absolute;
-    margin-left: -45%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+#BackFreandsBlog img{
     width: 35px;
     cursor: pointer;
 }
