--- a/MoonBookWeb/Views/Books/Index.cshtml
+++ b/MoonBookWeb/Views/Books/Index.cshtml
@@ -1,54 +1,61 @@
 ﻿@{
     var err = ViewData["ErrorBook"] as String[];
 }
-<h1> Add Book</h1>
-<form action="/Books/AddBook" method="post" enctype="multipart/form-data">
-   <input type="file" id="Cover" style="display: none;" accept="img/*" multiple/>       
-    <label for="Cover">
-             <img id="CoverImg" src="/icons/add_FILL0_wght500_GRAD0_opsz48.png" style="border: 2px double black; cursor:pointer; width: 120px; height: 250px;"/>
-    </label>
-   <p>Tiyle:           <p/> <input id="Title" type="text" name="Title" />
-       @if (!String.IsNullOrEmpty(err?[1])) @err[1]
-   <p>Author:          <p/> <input id="Author" type="text" name="Author" /> 
-       @if (!String.IsNullOrEmpty(err?[2])) @err[2]
-   <p>Genry:     <p/> <select name="Genry">
-                        <option selected="selected">Choose Genry</option>
-                        <option value="Prose">Prose</option>
-                        <option value="Poetry">Poetry</option>
-                        <option value="Lyrics">Lyrics</option>
-                        <option value="Memoirs">Memoirs</option>
-                        <option value="History">History</option>
-                        <option value="Detective">Detective</option>
-                        <option value="Adventures">Adventures</option>
-                        <option value="Fantasy">Fantasy</option>
-                        <option value="Cyberpunk">Cyberpunk</option>
-                        <option value="Publicism">Publicism</option>
-                        <option value="Events">Events</option>
-                        <option value="Review">Review</option>
-                        <option value="Criticism">Criticism</option>
-                        <option value="Philosophy">Philosophy</option>
-                        <option value="Religion">Religion</option>
-                        <option value="Esoterics">Esoterics</option>
-                        <option value="Occultism">Occultism</option>
-                        <option value="Mystic">Mystic</option>
-                        <option value="Horror">Horror</option>
-                        <option value="Politics">Politics</option>
-                        <option value="Erotica">Erotica</option>
-                        <option value="Love story">Love story</option>
-                        <option value="Natural science">Natural science</option>
-                        <option value="Humor">Humor</option>
-                        <option value="Parodies">Parodies</option>
-                        <option value="Translations">Translations</option>
-                        <option value="Fairy tales">Fairy tales</option>
-                        <option value="Dramaturgy">Dramaturgy</option>
-                        <option value="Postmodernism">Postmodernism</option>
-                        <option value="Metamodernism">Metamodernism</option>
-                      </select>
-       @if (!String.IsNullOrEmpty(err?[3])) @err[3]
-   <p>Annotation:            <p/> <textarea name="Annotation" ></textarea> 
-       @if (!String.IsNullOrEmpty(err?[4])) @err[4]
-   <p>Text:            <p/> <textarea id="ContentText" name="TextContent" ></textarea> 
-   <button id="AddBook">Add Book </button>
-</form>
-<input type="file" id="EpubFile" accept="epub/*"/>
-<script src="/js/book.js" ></script>
+<link rel="stylesheet" href="~/css/addbook.css" asp-append-version="true" />
+<div class="AddBook">
+    <h1 class="Title"> Add Book</h1>
+    <div class="Form">
+        <form action="/Books/AddBook" method="post" enctype="multipart/form-data">
+           <input type="file" id="Cover" style="display: none;" accept="img/*" multiple/>       
+           <label class="CoverImg" for="Cover">
+              <img id="CoverImg" src="/icons/add_FILL0_wght500_GRAD0_opsz48.png"/>
+           </label>
+           <p>Tiyle:           <p/> <input id="Title" type="text" name="Title" />
+               @if (!String.IsNullOrEmpty(err?[1])) @err[1]
+           <p>Author:          <p/> <input id="Author" type="text" name="Author" /> 
+               @if (!String.IsNullOrEmpty(err?[2])) @err[2]
+           <p>Genry:     <p/> <select name="Genry">
+                                <option selected="selected">Choose Genry</option>
+                                <option value="Prose">Prose</option>
+                                <option value="Poetry">Poetry</option>
+                                <option value="Lyrics">Lyrics</option>
+                                <option value="Memoirs">Memoirs</option>
+                                <option value="History">History</option>
+                                <option value="Detective">Detective</option>
+                                <option value="Adventures">Adventures</option>
+                                <option value="Fantasy">Fantasy</option>
+                                <option value="Cyberpunk">Cyberpunk</option>
+                                <option value="Publicism">Publicism</option>
+                                <option value="Events">Events</option>
+                                <option value="Review">Review</option>
+                                <option value="Criticism">Criticism</option>
+                                <option value="Philosophy">Philosophy</option>
+                                <option value="Religion">Religion</option>
+                                <option value="Esoterics">Esoterics</option>
+                                <option value="Occultism">Occultism</option>
+                                <option value="Mystic">Mystic</option>
+                                <option value="Horror">Horror</option>
+                                <option value="Politics">Politics</option>
+                                <option value="Erotica">Erotica</option>
+                                <option value="Love story">Love story</option>
+                                <option value="Natural science">Natural science</option>
+                                <option value="Humor">Humor</option>
+                                <option value="Parodies">Parodies</option>
+                                <option value="Translations">Translations</option>
+                                <option value="Fairy tales">Fairy tales</option>
+                                <option value="Dramaturgy">Dramaturgy</option>
+                                <option value="Postmodernism">Postmodernism</option>
+                                <option value="Metamodernism">Metamodernism</option>
+                              </select>
+               @if (!String.IsNullOrEmpty(err?[3])) @err[3]
+           <p>Annotation:            <p/> <textarea name="Annotation" ></textarea> 
+               @if (!String.IsNullOrEmpty(err?[4])) @err[4]
+           <p>Text:            <p/> <textarea id="ContentText" name="TextContent" ></textarea> 
+           <div>
+                <button type="submit" id="AddBook">Add Book </button>
+                <input type="file" id="EpubFile" accept="epub/*" />
+           </div>
+        </form>
+    </div>
+    <script src="/js/book.js" ></script>
+</div>
