--- a/MoonBookWeb/Views/Login/Update.cshtml
+++ b/MoonBookWeb/Views/Login/Update.cshtml
@@ -2,29 +2,47 @@
     var err = ViewData["err"] as String[];
     var user = ViewData["AuthUser"] as User;
 }
-<h1>
-    Edit User
-</h1>
-<div>
-    <img src="/img/@user?.PhotoName" style="border: 2px double black;  margin: 2%;  border-radius: 150px; width: 250px; height: 250px;"/>
+<link rel="stylesheet" href="~/css/change.css" asp-append-version="true" />
+<div class="Change">
+    <h1>
+        Edit User
+    </h1>
+    <form action="/Login/EditUser" method="post" enctype="multipart/form-data">
+        <input id="Avatar" type="file" name="Avatar" /> <br />
+        <label id="AvatarImg" for="Avatar">
+            <img src="/img/@user?.PhotoName" />
+        </label>
+            @if (!String.IsNullOrEmpty(err?[8]))
+                @err[8]
+
+       <p>Name:             <p/> <input type="text" name="Name" value="@user?.Name" />
+           @if (!String.IsNullOrEmpty(err?[1])) @err[1]
+       <p>Surname:          <p/> <input type="text" name="Surname" value="@user?.Surname" /> 
+           @if (!String.IsNullOrEmpty(err?[2])) @err[2]
+       <p>Status:          <p/> <textarea name="Status" value="@user?.Status" style="width: 250px"></textarea>
+       <p>Date of Bith:     <p/> <input type="date" name="DateOfBith" value="@user?.DateOfBith.Date.ToString("u")"/>
+           @if (!String.IsNullOrEmpty(err?[3])) @err[3]
+       <p>Login:            <p/> <input type="text" name="Login" value="@user?.Login"/> 
+           @if (!String.IsNullOrEmpty(err?[4])) @err[4]
+       <p>Email:            <p/> <input type="email" name="Email" value="@user?.Email"/> 
+           @if (!String.IsNullOrEmpty(err?[5])) @err[5]
+       <p>Password:         <p/> <input type="password" name="Password" /> 
+           @if (!String.IsNullOrEmpty(err?[6])) @err[6]
+       <p>Confirm password: <p/> <input type="password" name="ConfirmPass" /> 
+           @if (!String.IsNullOrEmpty(err?[7])) @err[7]
+            <br />
+       <button>Edit</button>
+    </form>
 </div>
-<form action="/Login/EditUser" method="post" enctype="multipart/form-data">
-   <p>Name:             <p/> <input type="text" name="Name" value="@user?.Name" />
-       @if (!String.IsNullOrEmpty(err?[1])) @err[1]
-   <p>Surname:          <p/> <input type="text" name="Surname" value="@user?.Surname" /> 
-       @if (!String.IsNullOrEmpty(err?[2])) @err[2]
-   <p>Status:          <p/> <textarea name="Status" value="@user?.Status" style="width: 250px"></textarea>
-   <p>Date of Bith:     <p/> <input type="date" name="DateOfBith" value="@user?.DateOfBith.Date.ToString("u")"/>
-       @if (!String.IsNullOrEmpty(err?[3])) @err[3]
-   <p>Login:            <p/> <input type="text" name="Login" value="@user?.Login"/> 
-       @if (!String.IsNullOrEmpty(err?[4])) @err[4]
-   <p>Email:            <p/> <input type="email" name="Email" value="@user?.Email"/> 
-       @if (!String.IsNullOrEmpty(err?[5])) @err[5]
-   <p>Password:         <p/> <input type="password" name="Password" /> 
-       @if (!String.IsNullOrEmpty(err?[6])) @err[6]
-   <p>Confirm password: <p/> <input type="password" name="ConfirmPass" /> 
-       @if (!String.IsNullOrEmpty(err?[7])) @err[7]
-   <p>Avatar:           <p/> <input type="file" name="Avatar"/> <br /> 
-       @if (!String.IsNullOrEmpty(err?[8])) @err[8]
-   <button>Edit</button>
-</form>
+    <script>
+        var avatar = document.getElementById("Avatar");
+        var avatarImg = document.querySelector("#AvatarImg img");
+        avatar.addEventListener("change", () => {
+            let f = avatar.files[0];
+            if (f) {
+                avatarImg.src = URL.createObjectURL(f);
+                localStorage.setItem('myImage', avatarImg.src);
+            }
+            avatarImg.src = localStorage.getItem('myImage')
+        })
+    </script>
