--- a/MoonBookWeb/Views/User/FreandPage.cshtml
+++ b/MoonBookWeb/Views/User/FreandPage.cshtml
@@ -7,7 +7,7 @@
 
         </freands>
     </div>
-    <post id="post" style="width: 100%; margin: 5%; display: block; background-color: #313574;">
+    <post id="post" style="border-radius: 20px; width: 100%; margin: 5%; display: block; background-color: #313574;">
 
     </post>
 </section>
