--- a/MoonBookWeb/wwwroot/css/post.css
+++ b/MoonBookWeb/wwwroot/css/post.css
@@ -171,6 +171,8 @@
 #CommentInfo {
     color: black;
     font-size: 10pt;
+    display: flex;
+    align-items: flex-end;
 }
 
     #CommentInfo p {
@@ -179,4 +181,5 @@
     }
         #CommentInfo i {
             font-size: 7pt;
+            margin-left: 0.5%;
         }
