--- a/MoonBookWeb/Views/Books/UserLibrary.cshtml
+++ b/MoonBookWeb/Views/Books/UserLibrary.cshtml
@@ -14,8 +14,9 @@
             </book>
         </div>
     </div>
-    <div id ="TextContent" style="margin-left: 3%;">
-
+    <div id="BackgrountColorText">
+        <div id="TextContent"></div>
     </div>
+    
 </div>
 <script src="/js/userlibrary.js"></script>
