--- a/MoonBookWeb/wwwroot/css/userlibrary.css
+++ b/MoonBookWeb/wwwroot/css/userlibrary.css
@@ -51,7 +51,6 @@
     }
 
 #TextContent {
-    background-color: antiquewhite;
     width: 100%;
     color: black;
     white-space: pre-line;
@@ -65,6 +64,11 @@
 #RadioButtonGroup {
     display: inline-block;
     overflow: hidden;
+}
+
+#BackgrountColorText {
+    margin-left: 3%;
+    background-color: antiquewhite;
 }
 
 #RadioButton {
