--- a/MoonBookWeb/Views/User/FreandPage.cshtml
+++ b/MoonBookWeb/Views/User/FreandPage.cshtml
@@ -1,4 +1,5 @@
 ﻿<link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/comment.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/freand.css" asp-append-version="true" />
 <section id="FreandPage">
     <div id="FreandList">
