--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -3,6 +3,7 @@
 }
 <link rel="stylesheet" href="~/css/userpage.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/comment.css" asp-append-version="true" />
 <section id="UserPage">
     <div id="UserAvatar">
         @if(!String.IsNullOrEmpty(user?.PhotoName))
