--- a/MoonBookWeb/Views/Home/Index.cshtml
+++ b/MoonBookWeb/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿<link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/comment.css" asp-append-version="true" />
 <section id="BlogPage">
     <post id="post"> <img src="../icons/oie_L36bLHLNsDH2.gif" /> </post>
 </section>
