--- a/MoonBookWeb/Views/Books/UserLibrary.cshtml
+++ b/MoonBookWeb/Views/Books/UserLibrary.cshtml
@@ -15,8 +15,13 @@
         </div>
     </div>
     <div id="BackgrountColorText">
-        <div id="TextContent"></div>
+        <div id="TextContent">
+            
+        </div>
     </div>
-    
+    <dialog class="Dialog" id="Dialog">
+        <div id="TextComment" contenteditable="true"></div>
+        <img id="SendCommentImg" src="/icons/send_FILL0_wght400_GRAD0_opsz48.png">
+    </dialog>
 </div>
 <script src="/js/userlibrary.js"></script>
