--- a/MoonBookWeb/Views/User/Index.cshtml
+++ b/MoonBookWeb/Views/User/Index.cshtml
@@ -26,7 +26,7 @@
 
         </books>
         <div id="SendPost">
-            <textarea id="Text" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" cols="4" wrap="soft"></textarea>
+            <textarea id="Text" contenteditable="true"></textarea>
             <button id="Post">
                 <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png"/>
             </button>
