--- a/MoonBookWeb/wwwroot/css/comment.css
+++ b/MoonBookWeb/wwwroot/css/comment.css
@@ -44,7 +44,7 @@
 #PhotoComment {
     border: 2px double black;
     vertical-align: top;
-    margin: 1%;
+    margin: 3px;
     border-radius: 150px;
     width: 35px;
     height: 35px;
@@ -66,3 +66,6 @@
         font-size: 7pt;
         margin-left: 0.5%;
     }
+.CommentText {
+    word-break: break-all;
+}
