--- a/MoonBookWeb/wwwroot/css/post.css
+++ b/MoonBookWeb/wwwroot/css/post.css
@@ -12,9 +12,6 @@
     color: black;
     margin-left: 1%;
 }
-#TextComment {
-    margin-left: 1%;
-}
 #PostDelete {
     float: right;
     width: 17px;
@@ -68,17 +65,12 @@
 }
 
 #PostComment {
-    width: 100%;
-    height: 60px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-content: center;
+    margin-bottom: 2%;
 }
 
-    #PostComment textarea {
-        width: 90%;
-        float: left;
-        height: 35px;
-        border: 3px double gray;
-        border-radius: 25px;
-    }
 
     #PostComment button {
         float: right;
@@ -87,14 +79,21 @@
         height: 30px;
         border-color: transparent;
         margin-right: 3%;
+        display: flex;
+        align-items: center;
     }
 
         #PostComment button img {
             width: 30px;
             height: 30px;
-            margin-right: 5%;
         }
-
+#TextComment {
+    width: 90%;
+    float: left;
+    border: 3px double gray;
+    border-radius: 25px;
+    background-color: white;
+}
 #PostReactions {
     width: 100%;
     height: 40px;
