--- a/MoonBookWeb/wwwroot/css/userlibrary.css
+++ b/MoonBookWeb/wwwroot/css/userlibrary.css
@@ -34,11 +34,27 @@
     display: block;
     width: 250px;
     border: 2px double black;
+    padding: 6px;
+    border-radius: 10px;
 }
+    #UserLibrary book::-webkit-scrollbar {
+        width: 6px;
+    }
+    #UserLibrary book::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+    #UserLibrary book::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 20px;
+    }
+
+        #UserLibrary book::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
 
 .BookItem {
     cursor: pointer;
-    margin-top: 1%;
+    margin-top: 2%;
     height: 75px;
     align-items: center;
     border: 2px double black;
@@ -104,4 +120,29 @@
     -moz-appearance: none;
     appearance: none;
     user-select: none;
+}
+.Dialog {
+    width: 270px;
+    display: flex;
+    position: absolute;
+    border-radius: 35px;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 10px;
+    background: #313574;
+    visibility: hidden;
+    margin: 0;
+}
+    .Dialog img {
+        width: 30px;
+        height: 30px;
+        margin-right: 5%;
+        cursor:pointer;
+    }
+#TextComment {
+    width: 100%;
+    float: left;
+    border: 3px double gray;
+    border-radius: 25px;
+    background: white;
 }
