--- a/MoonBookWeb/wwwroot/css/freand.css
+++ b/MoonBookWeb/wwwroot/css/freand.css
@@ -1,4 +1,19 @@
 ﻿/*=================== Freand ===============*/
+#search_user_text {
+    height: 25px;
+    border-radius: 20px;
+}
+
+#search_user {
+    background-color: transparent;
+    width: 30px;
+    border-color: transparent;
+    margin-right: 2%;
+    height: 25px;
+    align-items: center;
+    justify-content: center;
+    display:flex;
+}
 #FreandPagePhoto {
     border: 2px double black;
     margin: 2%;
@@ -40,6 +55,7 @@
     width: 250px;
     border: 2px double black;
     border-radius: 10px;
+    padding: 2px;
 }
 
 #FreandList {
@@ -78,6 +94,7 @@
     border: 1px double black;
     align-items: center;
     border-radius: 10px;
+    margin-top: 2px;
 }
 
 #FreandPhoto {
@@ -86,7 +103,7 @@
     align-items: flex-end;
     margin: 1%;
 }
-    #FreandPhoto img{
+    #FreandPhoto img {
         border: 2px double black;
         vertical-align: top;
         margin: 1%;
@@ -106,6 +123,7 @@
     width: 25px;
     height: 25px;
     cursor: pointer;
+    margin-left: -30%;
 }
 #BackFreandsBlog {
     width: 100%;
